# aoc24

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aoc24.cabal  cabal.project  pyproject.toml
src/aoc24/: Main.hs  __init__.py  main.py
src/aoc24/Haskell/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
src/aoc24/day1/: solution.py
src/aoc24/day1/haskell/: solution.hs
src/aoc24/day1/python/: solution.py
src/aoc24/day2/haskell/: solution.hs
src/aoc24/day3/haskell/: solution.hs
src/aoc24/python/: day1.py
