cabal-version:      2.4
name:               aoc24
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Advent of Code 2024

license:            MIT
author:             Carl Thunman
maintainer:         thunman@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md
    LICENSE

executable aoc24
    main-is:          Main.hs
    other-modules:    Haskell.Day1
                    Haskell.Day2
                    Haskell.Day3
                    Haskell.Day4
    default-extensions: 
        ImportQualifiedPost
    build-depends:    base ^>=4.17.2.1
                    , containers
                    , text
                    , array
    hs-source-dirs:   src/aoc24
    default-language: Haskell2010
    -- ghc-options:      -O2 -Wall -optl-Wl,-no_compact_unwind
